[package]
name = "bidimap"
version = "0.7.0"
description = "Bijective maps"
repository = "https://github.com/urschrei/bimap-rs/"
documentation = "https://docs.rs/bidimap/"
readme = "README.md"
keywords = ["bijection", "bidirectional", "map", "container", "two-way"]
categories = ["data-structures", "algorithms", "no-std"]
license = "Apache-2.0/MIT"
edition = "2024"

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
fnv = "1.0"
hashbrown = "0.16"

# This ensures that documentation for optional features is on docs.rs.
[package.metadata.docs.rs]
all-features = true
